# hprofiler

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  all  echo.profiler.json  hprofiler  pyproject.toml  requirements.txt  setup_llm.sh
hooks/: CMakeLists.txt
hooks/common/: callstack.h
hooks/cuda_hook/: CMakeLists.txt  cuda_hook.c
hooks/mpi_hook/: CMakeLists.txt  mpi_hook.c
hooks/nccl_hook/: CMakeLists.txt  nccl_hook.c
hooks/ompt_tool/: CMakeLists.txt  ompt_tool.c
hooks/opencl_hook/: CMakeLists.txt  opencl_hook.c
hooks/rocm_hook/: CMakeLists.txt  rocm_hook.c
memory/: project_hprofiler.md
src/analysis/: addr2line.py  agent.py  agent_tools.py  asm_advisor.py  cct.py  context.py  device.py  hwcounters.py  report.py  roofline.py
src/analysis/llm/: __init__.py  anthropic.py  base.py  openai_compat.py
src/backends/: __init__.py  base.py  cuda.py  likwid.py  mpi.py  nccl.py  opencl.py  openmp.py  perf.py  rocm.py
src/core/: events.py  runner.py  trace.py
src/disasm/: __init__.py  classifier.py  extractor.py  source_ann.py
src/output/: chrome_trace.py  flamegraph.py  flamegraph_tui.py  otlp.py  roofline_html.py  roofline_tui.py  summary.py  term_image.py
src/ui/: app.py
